#1 DataForm issues fixed #2 RadioInput issues fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     ],
     "paths": {
       "hazelnut-ui/lib": ["src"],
-      "mg-lib": ["src"],
+      "hazelnut-lib": ["src"],
       "hazelnut-ui": ["src/index"]
     }
   },
